javadoc, code commentary, refactor